selfhost/test/parser/lambdas_error_badparam_None.out
Error at %FILE_NAME%:1:11
Unexpected token '=>':
  |  (a, None) => 123
               ^